# Spotify_save_DW

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  PiDockerfile  README.md  Taskfile.yml  docker-compose.debug.yml  docker-compose.yml  package-lock.json  pi-docker-compose.yml  pirequirements.txt  pyproject.toml  requirements.txt
.github/actions/ansible-deploy/: action.yml
.github/workflows/: ci.yaml  release.yml  webpack.yml
.stackedit-trash/: README.1.md
caddy/: Caddyfile  Dockerfile
caddy/dev/: Caddyfile  Caddyfile.frontend
deploy/deploy-test/: .env.j2  compose.yml  deploy-test.yml
deploy/prod/: .env.j2  compose.yml  deploy.yml
deploy/test/: .env.j2  compose.yml
docs/dwman/: bruno.json  get accsess token.bru  get me.bru  get player.bru  local accsess token.bru  local me.bru  proxy accsess token.bru  proxy me.bru  proxy player.bru  refresh token.bru
docs/dwman/environments/: dwman.bru
scripts/: build.sh  docker.sh  docker_sp.sh  pidocker.sh  stop_docker.sh  stop_pidocker.sh
src/: main.py
src/backend/: metadata.py
src/backend/app/: __init__.py  _load_dotenv.py  api_routes.py  crud.py  db_connector.py  dw_save_algoritm.py  front_routes.py  logger.py  mail_handle.py  shemas.py  task_handler.py  types.py  utils.py
src/backend/app/routes/: api_routes.py  front_routes.py  proxy_routes.py
src/configs/: scope.py  uvicorn.py
src/frontend/: .eslintrc.cjs  .prettierrc  .prettierrc.cjs  README.md  babel.config.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
src/frontend/react-email-starter/: package-lock.json  package.json  pnpm-lock.yaml  readme.md  render_templates.ts
src/frontend/react-email-starter/.react-email/: package.json
src/frontend/react-email-starter/.react-email/emails/: Email.tsx  mail-notify.tsx  mail-save-pl.tsx
src/frontend/react-email-starter/emails/: Email.tsx  mail-notify.tsx  mail-save-pl.tsx
src/frontend/react-email-starter/emails/components/: Email.tsx  MailFooter.tsx  MailHeader.tsx
src/frontend/react-email-starter/emails/templates/: mail-notify.tsx  mail-save-pl.tsx
src/frontend/src/: aboutPage.tsx  app.tsx  env.d.ts  index.css  index.ts  input.css  main.tsx  userApp.tsx
src/frontend/src/api/: SpotifyApi.ts  config.ts
src/frontend/src/api/client/: index.ts
src/frontend/src/components/: AccountStatus.tsx  BlobButton.tsx  Burger.tsx  BurgerMenu.tsx  ClickButton.tsx  EasterEgg.tsx  Footer.tsx  FullPlaylist.tsx  Header.tsx  LogoutButton.tsx  ModalAvatar.tsx  Playlist.tsx  PlaylistTitle.tsx  SavePlaylist.tsx  SavePlaylistButtons.tsx  SaveSongPlaylist.tsx  SettingsPanel.tsx  SongCard.tsx  UserCard.tsx  WeekCounter.tsx  app.ts  app.tsx  button.tsx
src/frontend/src/components/Buttons/: BaseButton.tsx  BlobButton.tsx  ClickButton.tsx  (+2 more)
src/frontend/src/icons/: Blob.tsx  Logos.tsx
src/frontend/src/interfaces/: Cookies.ts  FormDataMap.ts  Playback.ts  Song.ts
src/frontend/src/pages/: aboutPage.tsx  app.tsx  userApp.tsx
src/frontend/src/store/: authStore.ts  store.ts
src/frontend/src/types/: song.d.ts
src/frontend/src/utils/: apiManager.ts  auth.ts  compat.ts  coockieHandle.ts  cookieHandle.ts  dbManager.ts  songSet.ts  timeMangment.ts  tw-colors.css  utils.ts
src/frontend/static/css/: styles.css  twstyles.css
src/frontend/static/scripts/: bundle.js  bundle.js.LICENSE.txt
src/frontend/templates/: base.html  home.html  index.html  mail_notify.html  mail_save_pl.html  user.html
src/notifier/: main.go
tests/backend/test_api/: test_sample.py
tests/frontend/: package-lock.json  package.json  playwright-ct.config.ts  pnpm-lock.yaml
tests/frontend/src/: EasterEgg.spec.tsx
tests/frontend/unit/: SongSet.test.ts  apiManager.test.ts  dbManager.test.ts  timeManagement.test.ts
(+59 files in other folders)
