[tool.poetry]
name = "spotify_dw_api"
version = "0.1.0"
description = ""
authors = ["WildElaeagnus <54314123+akorzunin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
pydantic = "<2.0"
Jinja2 = "^3.1.2"
tinydb = "^4.8.0"
schedule = "^1.2.0"
APScheduler = "^3.10.1"
fastapi-mail = "^1.3.1"
fastapi-sessions = "^0.3.2"
fastapi = "^0.100.0"
email-validator = ">=1.3,<2.0"

[tool.poetry.dev-dependencies]
arel = "^0.2.0"
websockets = "^11.0.3"
black = {version = "^23.3.0", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
