[tool.poetry]
name = "spotify_dw_api"
version = "0.1.0"
description = ""
authors = ["WildElaeagnus <54314123+akorzunin@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.24.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
jinja2 = "^3.1.4"
tinydb = "^4.8.2"
schedule = "^1.2.2"
apscheduler = "^3.10.4"
fastapi-mail = "^1.4.1"
fastapi-sessions = "^0.3.2"
fastapi = "^0.115.2"
email-validator = "^2.2.0"
structlog = "^24.4.0"
httpx = "^0.27.2"


[tool.poetry.dev-dependencies]
arel = "^0.2.0"
websockets = "^11.0.3"
black = {version = "^23.3.0", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "C408",  # unnecessary-collection-call
    "E712",  # true-false-comparison (only for TinyDB queries)
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true
